# HNOCA-tools

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build-site.yaml  publish.yaml
CHANGELOG/: index.html
api/map/AtlasMapper/: index.html
api/mapping/AtlasMapper/: index.html
api/snapseed/annotate/: index.html
api/snapseed/annotate_hierarchy/: index.html
api/snapseed/find_markers/: index.html
api/stats/create_pseudobulk/: index.html
api/stats/test_de/: index.html
api/stats/test_de_paired/: index.html
api/utils/compute_glycolysis_score/: index.html
archmap/: index.html
atlas/: matching.py  stats.py  wknn.py
atlas/annot/: annotate.py
atlas/mapping/: __init__.py  mapper.py
atlas/stats/: __init__.py  de.py  tests.py
contributing/: index.html
docs/: 404.html  api.md  conf.py  contributing.md  index.html  objects.inv
docs/api/map/AtlasMapper/: index.html
docs/api/snapseed/annotate/: index.html
docs/api/snapseed/annotate_hierarchy/: index.html
docs/api/snapseed/find_markers/: index.html
docs/api/stats/test_de/: index.html
docs/api/stats/test_de_paired/: index.html
docs/archmap/: index.html
docs/assets/javascripts/: bundle.081f42fc.min.js
docs/assets/javascripts/lunr/: wordcut.js
docs/assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hi.min.js  lunr.hu.min.js  lunr.hy.min.js  lunr.it.min.js  lunr.ja.min.js  lunr.kn.min.js  lunr.ko.min.js  lunr.multi.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sa.min.js  lunr.stemmer.support.min.js  lunr.sv.min.js  lunr.ta.min.js  lunr.te.min.js  lunr.th.min.js  lunr.tr.min.js  lunr.vi.min.js  lunr.zh.min.js
docs/assets/javascripts/workers/: search.b8dbb3d2.min.js
docs/assets/stylesheets/: main.6543a935.min.css  palette.06af60db.min.css
docs/css/: ansi-colours.css  jupyter-cells.css  pandas-dataframe.css
docs/notebooks/: example.ipynb
docs/quickstart/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/vignettes/get_started/: index.html
hnoca/map/: __init__.py  mapper.py  utils.py  wknn.py
hnoca/snapseed/: annotate.py  auroc.py  markers.py
hnoca/stats/: de.py  pseudobulk.py
hnoca/utils/: __init__.py  stress.py
quickstart/: index.html
search/: search_index.json
site/: CHANGELOG.md  archmap.md  contributing.md  index.md  quickstart.md
site/api/map/: AtlasMapper.md
site/api/mapping/: AtlasMapper.md
site/api/snapseed/: annotate.md  annotate_hierarchy.md  find_markers.md
site/api/stats/: create_pseudobulk.md  test_de.md  test_de_paired.md
site/api/utils/: compute_glycolysis_score.md
site/stylesheets/: extra.css
site/vignettes/: annotation.ipynb  atlas_mapping.ipynb  get_started.md  reference_mapping.ipynb
src/hnoca/: __init__.py  _logging.py
src/hnoca/map/: mapper.py  matching.py  utils.py
src/hnoca/mapping/: __init__.py  mapper.py  matching.py  utils.py  wknn.py
src/hnoca/snapseed/: __init__.py  annotate.py  auroc.py  colors.py  markers.py  utils.py
src/hnoca/stats/: __init__.py  de.py  pseudobulk.py  tests.py
src/hnoca/utils/: __init__.py  check.py  stress.py
tests/: test_basic.py
tests/data/: precomputed_leiden.csv  snapseed_markers_flat.yaml  snapseed_markers_h2.yaml  snapseed_markers_h3.yaml
tests/snapseed/: conftest.py  test_annotate.py
vignettes/annotation/: index.html
vignettes/atlas_mapping/: index.html
vignettes/get_started/: index.html
